<resources>
    <string name="app_name">ReelMe</string>
    <string-array name="tab_challange">
        <item>access to care ultra sound</item>
        <item>Setup Customer Service Communities</item>
        <item>My new challenge</item>
    </string-array>
    <string name="allevents">All events</string>
    <string name="discussions">All discussions</string>
    <string name="newDiscussionTitle">Ask your question here with \'What\', \'How\', \'When\' and so on. \n\nExample.What is the cutoff mark for Mechanical Engineering in MIT, Chennai</string>
    <string name="ad_notification">Your ad will stay online during the date indicated above or until you remove it.</string>
    <string name="ad_notification2">Your ad will stay online during the date and time indicated above or until you remove it. If you sold the item, kindly delete the ad</string>
    <string name="home_welcomestring">Ideas</string>
    <string name="home_enterMobileTitle">Enter your\nmobile number</string>
    <string name="home_enterMobileSubTitle">We\'ll text you a code to verify your phone</string>
    <string name="home_enterMobilePrefix">+</string>
    <string name="home_enterMobilePostfix">+9(000)000-00-00</string>
    <string name="cantsign">CAN\'T SIGNIN"</string>
    <string name="home_verifyMobileTitle">Verify your\nmobile number</string>
    <string name="home_verifyMobileSubTitle">Enter the 6-digit code we sent to you</string>
    <string name="home_verifyMobileSubTitle2">Text sent to +1 (303) 432-23-35</string>
    <string name="home_referralMobileTitle">Do you have a Referral Code?</string>
    <string name="home_referralMobileSubTitle">Please enter the referral code from the message you got to sign up on  RealMe.</string>
    <string name="home_referralMobileSubTitle2">Referral Code</string>
    <string name="home_emaillMobileTitle">Enter your \nemail address</string>
    <string name="home_emailMobileSubTitle">Please enter your email address.</string>
    <string name="home_emailMobileSubTitle2">Your Email</string>
    <string name="home_emailskip">By tapping Continue, you agree to the Terms of\nService &amp; Privacy Policy </string>
    <string name="home_fullnameTitle">Enter your\nfull name</string>
    <string name="home_fullnameSubTitle">Please enter your full name.</string>
    <string name="home_fullnameSubTitle2">First Name</string>
    <string name="home_fullnameSubTitle3">Last Name</string>
    <string name="home_dateTitle">Enter your\ndate of birth</string>
    <string name="home_dateSubTitle">Please enter your date of birth.</string>
    <string name="home_dateSubTitle2">MM / DD / YYYY</string>
    <string name="home_bioTitle">Add a Bio to\nyour profile</string>
    <string name="home_bioSubTitle"></string>
    <string name="home_bioSubTitle2">Write here</string>
    <string name="home_genderTitle">What is\nyour gender?</string>
    <string name="home_genderSubTitle"></string>
    <string name="home_genderSubTitle2">This will help ReelMe provide you with better connections and a content. Other user will not see this information but it can be used to filter the content you see.</string>
    <string name="home_religiousTitle">Religious Beliefs?</string>
    <string name="home_relationshipTitle">Relationship\nStatus?</string>
    <string name="home_childrenTitle">Do you have\nchildren?</string>
    <string name="home_occupationTitle">What is your\nOccupation?</string>
    <string name="home_usernameTitle">Create your\nunique username</string>
    <string name="home_userSubTitle">Can contain only letters, numbers,  underscores and periods.</string>
    <string name="home_userSubTitle2">Username</string>
    <string name="home_userSubTitle3">www.reelme.com/username</string>
    <string name="home_hobbiesTitle">Hobbies &amp;\nInterests?</string>
    <string name="home_hobbiesSubTitle">Hobbies &amp; Interests</string>
    <string name="home_skip">Skip</string>
    <string name="demography_genderTitle">What is your gender?</string>
    <string name="demography_relationshipTitle">Relationship Status</string>
    <string name="demography_childrenTitle">Do you have children?</string>
    <string name="demography_occupationTitle">What is your Occupation?</string>
    <string name="demography_religiousTitle">Religious Beliefs?</string>
    <string name="demography_hobbiesTitle">Hobbies &amp; Interests?</string>
    <string name="deactivate"><b>Deactivate account</b>\n\n<p style="ine-height:2em">This can be temporary.</p>\n\nYour account will be disabled and your names and your reels will be removed from most things you\'ve shared. You will be able to continue using Messenger.</string>
    <string name="deleteaccoount"><b>Delete account.</b>\n\n<p style="ine-height:2em">This is permanent.</p>\n\nWhen you delete ReelMe account. You won\'t be able to retrieve the content or information that you\'e shared on ReelMe. Your messenger and all your messages will also be deleted</string>
    <string name="home_welcomestring2">Real People.</string>
    <string name="home_welcomestring3">Reel Connection.</string>
    <string name="home_welcomestring4">Real Community.</string>
    <string name="app_title">Ticket Exchange</string>
    <string name="network_ErrorMsg">You appear to be offline. Please check your internet settings.</string>
    <string name="invalid_email_ErrorMsg">Kindly enter valid E-Mail address</string>
    <string name="invalid_name_ErrorMsg">Kindly enter valid Name address</string>
    <string name="invalid_date_ErrorMsg">Kindly enter valid date address</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="chooseFile">Choose File</string>
    <string name="upload">Upload</string>
    <string name="editprofile_save">Save</string>
    <string name="editprofile_cancel">Cancel</string>
    <string name="personalInfo">Personal Info</string>
    <string name="displayName">Display Name</string>
    <string name="realName">Real Name</string>
    <string name="gender">Gender</string>
    <string name="category">Category</string>
    <string name="ethinicity">Ethinicity</string>
    <string name="religion">Religion</string>
    <string name="martialStatus">Martial Status</string>
    <string name="aboutMe">About Me</string>
    <string name="location">Location</string>
    <string name="birthday">Birthday</string>
    <string name="height">Height</string>
    <string name="figure">Figure</string>
    <string name="occupation">Occupation</string>
    <string name="birthDateHint">dd/mm/yyyy</string>
    <string name="infoMsg_title">Please write title at least 8 letters</string>
    <string name="loginValidtionErrorMsg">Please provide all the valid inputs</string>
    <string name="disussionSelect">Please select discussion category</string>
    <string name="loginFailed">Please check your username and password</string>
    <string name="loginSucess">Authentication successful</string>
    <string name="forgotPasswordSuccess">We\'ve just sent you an email to reset your password.</string>
    <string name="errorMsgGeneric">Something went wrong.Please try again later.</string>
    <string name="hobbies_headline"> I enjoy these activities the most:</string>
    <string name="like">Like</string>
    <string name="uploadImageValidtionErrorMsg">Please choose an image to upload</string>
    <string name="mandatoryField">Please fill the mandatory fields</string>
    <string name="soldout">SOLD OUT</string>
    <string name="ticketAvailability">Ticket Availability</string>
    <string name="terms">By signing up, I agree to Grads\'s %s</string>
    <string name="termslink">Terms and Conditions</string>
    <string name="forgotPasswordTxt">Forgot Password</string>
    <string name="sendEmailTxt">Send Email</string>
    <string name="resetPasswordTxt">Reset Password</string>
    <string name="passwordHint">Password (Min 8 Character)</string>
    <string name="confirmpasswordHint">Confirm Password</string>
    <string name="creationFailed">Sorry for the inconvenience. Please try again later</string>
    <string name="leaveGroup">Leave Group</string>
    <string name="emailHint">Email</string>
    <string name="passwordtxt">Password</string>
    <string name="doneTxt">Done</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="signInText">Sign In</string>
    <string name="signUpText">Sign Up</string>
    <string name="defaultDate">dd/mm/yyyy</string>
    <string name="defaultTime">mm:hh</string>
    <string name="addressNotification">Make sure the address is correct</string>
    <string name="review_post">POST</string>
    <string name="review_next">NEXT</string>
    <string name="review_edit">EDIT</string>
    <string name="cooment_hint">Write your comment here</string>
    <string name="review_hint">Write your review</string>
    <string name="search_hint">Enter the tags</string>
    <string name="find_btn">Find A Coach / Mate</string>
    <string name="be_btn">Be A Coach / Mate</string>
    <string name="USR_DLS_Verify_Email_Title_Txt">Confirm your email</string>
    <string name="USR_DLS_Verify_Email_Sent_Txt">We\'ve just sent you an email to </string>
    <string name="USR_DLS_Verify_Email_Explainary_Txt">Please check your email and activate your account.</string>
    <string name="USR_DLS_Verify_Email_Resend_Btn_Title_Txt">I haven\'t received an email</string>
    <string name="USR_DLS_Verify_Email_Security_Txt">We go through this process for your security.</string>
    <string name="USR_DLS_Verify_Email_Verified_Btn_Title_Txt">I\'ve already verified</string>
    <string name="finderPersonTitle">Find your next mate or trainer</string>
    <string name="finderEventTitle">Find the next happening in your city</string>
    <string name="infoMsg">Please write your question</string>
    <string name="infoMsg_discussion">Please write your question at least 20 letters</string>
    <string name="likes">%s likes</string>
    <string name="resnd_Verify_Email_Title_Txt">We have resent the verification mail. Please verify.</string>
    <string name="follow">Follow</string>
    <string name="following">Unfollow</string>
    <string name="save">Save</string>
    <string name="saved">Unsave</string>
    <string name="join">Join Group</string>
    <string name="unjoin">Unjoin Group</string>
    <string name="members">Members</string>
    <string name="savedBy">Saved By</string>
    <string name="creationDate">Posted On</string>
    <string name="creationby">Created By : </string>
    <string name="passwordMismatch">Please make sure your password match</string>
    <string name="course">Course</string>
    <string name="dreamOrg">Dream University / College</string>
    <string name="admission_merit">Merit</string>
    <string name="admission_management">Management</string>
    <string name="admission_both">Merit and Management</string>
    <string name="admission">Admission</string>
    <string name="group_name">Group Name</string>
    <string name="group_makepublic">Make this Group Public</string>
    <string name="group_title">What is this group about?</string>
    <string name="event_title">Event Title</string>
    <string name="event_title_hint">On/Off Campus, Walk-Ins and etc. </string>
    <string name="event_desc">Event Description</string>
    <string name="event_desc_hint">It\' is better to be short and informative </string>
    <string name="event_description">Group Description (max 140 characters)</string>
    <string name="event_create">Create Event</string>
    <string name="group_create">Create</string>
    <string name="title">Event Title</string>
    <string name="desc">Description</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="group_desc">Group Description (max 140 characters)</string>
    <string name="pick_your_hobbies_amp_interests"><![CDATA[Pick your hobbies & interests]]></string>
</resources>