<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="homeData"
            type="com.guiado.grads.viewmodel.SignInViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="@dimen/dimen_32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/home_welcomestring"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_32"
            android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailHint"
                    android:text="@={homeData.dataUsername}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordtxt"
                    android:text="@={homeData.dataPassword}" />

            </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16"
            android:background="@drawable/circular_bg_blue"
            android:onClick="@{() -> homeData.doSignInUser()}"
            android:text="@string/signInText"
            android:textSize="@dimen/dimen_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16"
            android:gravity="end"
            android:onClick="@{() -> homeData.forgotPaswwordFragment()}"
            android:text="@string/forgotPasswordTxt"
            android:textStyle="bold" />

    </LinearLayout>
</layout>