<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="homeData"
            type="com.guiado.linkify.viewmodel.NewGroupViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16">

                <EditText
                    android:maxLength="25"
                    android:gravity="top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_8"
                    android:hint="@string/group_name"
                    android:text="@={homeData.userTitle}"/>

                <TextView
                    android:maxLength="280"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_title"
                    android:textColor="@color/orange"
                    android:textStyle="bold"/>

                <EditText
                    android:gravity="top"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:paddingBottom="@dimen/dimen_8"
                    android:hint="@string/group_desc"
                    android:text="@={homeData.userDesc}"/>

                <Switch
                    android:visibility="gone"
                    android:textColor="@color/colorBlacklight"
                    android:textSize="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:text="@string/group_makepublic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:visibility="@{homeData.showSignUpBtn}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_create"
                android:background="@color/yellow"
                android:onClick="@{homeData.doPostEvents()}"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold"
                android:id="@+id/loginButton" />
            <ProgressBar
                android:progressTint="@color/yellow"
                android:visibility="@{homeData.showSignUpProgress}"
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </RelativeLayout>
</layout>