<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="homeData"
            type="com.nioneer.nioneer.viewmodel.RideViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradiant_violet"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_welcomestring"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_36"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/home_welcomestring3"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimen_28" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dimen_20"
                android:text="@string/home_welcomestring4"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_12"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_4"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gradiant_blue"
                    android:onClick="@{() -> homeData.beClicked()}"
                    android:paddingTop="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_16"
                    android:text="@string/find_btn"
                    android:textColor="@color/white_transparent_80"
                    android:textSize="@dimen/dimen_16"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_4"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gradiant_blue"
                    android:onClick="@{() -> homeData.findClicked()}"
                    android:paddingTop="@dimen/dimen_16"
                    android:textColor="@color/white_transparent_80"
                    android:paddingBottom="@dimen/dimen_16"
                    android:text="@string/be_btn"
                    android:textSize="@dimen/dimen_16"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>