<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="homeData"
            type="com.guiado.grads.viewmodel.HobbiesViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:weightSum="12"
        android:orientation="vertical">

    <LinearLayout
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/dimen_32"
            android:textSize="@dimen/dimen_32"
            android:padding="@dimen/dimen_16"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/home_hobbiesTitle"
                 />

        <EditText
            android:layout_margin="@dimen/dimen_16"
            android:drawableEnd="@android:drawable/ic_menu_search"
            android:padding="@dimen/dimen_8"
            android:textSize="@dimen/dimen_12"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pick_your_hobbies_amp_interests"
            android:textColorHint="@color/colorGrey" />




        <Button
            android:layout_marginTop="@dimen/dimen_32"
            android:textColor="@color/smoke2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16"
            android:paddingTop="@dimen/dimen_20"
            android:paddingEnd="@dimen/dimen_32"
            android:paddingStart="@dimen/dimen_32"
            android:paddingBottom="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_16"
            android:background="@drawable/button_black"
            android:onClick="@{() -> homeData.signUpUserClicked()}"
            android:text="Next ->" />

        <TextView
            android:layout_margin="@dimen/dimen_20"
            android:textSize="@dimen/dimen_12"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_genderSubTitle2"
            />


      </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:background="@color/black"
            android:orientation="vertical">

            <TextView
                android:paddingStart="@dimen/dimen_16"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_skip" />

        </LinearLayout>

    </LinearLayout>
</layout>